Lots of changes, fixed npc position, added TextDisplay above them, created custom argument for gamemode command, added String Templae support for MiniMessage